[tool.poetry]
name = "multi-tool-agent"
version = "0.1.0"
description = ""
authors = ["Gowtham E <gowtham495@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.14,<4.0"
anyio = "4.12.1"
build = "1.4.0"
cachecontrol = "0.14.4"
certifi = "2026.1.4"
charset-normalizer = "3.4.4"
cleo = "2.1.0"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.4.0"
dulwich = "0.24.10"
fastjsonschema = "2.21.2"
filelock = "3.20.3"
findpython = "0.7.1"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
idna = "3.11"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jaraco-context = "6.0.2"
jaraco-functools = "4.4.0"
keyring = "25.7.0"
more-itertools = "10.8.0"
msgpack = "1.1.2"
packaging = "25.0"
pbs-installer = "2025.12.17"
pkginfo = "1.12.1.2"
platformdirs = "4.5.1"
poetry = "2.2.1"
poetry-core = "2.2.1"
pyproject-hooks = "1.2.0"
pywin32-ctypes = "0.2.3"
rapidfuzz = "3.14.3"
requests = "2.32.5"
requests-toolbelt = "1.0.0"
shellingham = "1.5.4"
tomlkit = "0.13.3"
trove-classifiers = "2025.12.1.14"
urllib3 = "2.6.3"
virtualenv = "20.36.1"
zstandard = "0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.0"
mypy = "^1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
